--- a/css/europe.css
+++ b/css/europe.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 
 :root{
     --main-color:#7AB730;
@@ -8,7 +9,7 @@
 }
 
 *{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Nunito', sans-serif;
     margin:0; padding:0;
     box-sizing: border-box;
     outline: none; border:none;
@@ -57,12 +58,14 @@ section{
     border-bottom: var(--border);
     position: fixed;
     top:0; left: 0; right: 0;
+    z-index: 9999;
 
 
 }
 
-.header .logo i{
+.header  i{
     height: 5rem;
+    width: 6rem;
     color: var(--main-color);
 }
 
@@ -94,61 +97,226 @@ section{
 
 /*start of europe */
 
+
+
+
 .euro{
-    margin-top: 4%;
-    display: block;
-    position: fixed;
-
+    display: flex;
+    flex-wrap: wrap;
+    gap:1.3rem;
+    min-height: 100vh;
+    align-items: center;
+    
 }
 
-.euro .box{
+.euro .cont{
+    flex:1 1 40rem;
+    padding-top: 6.5rem;
+}
+  
+.euro .image{
+    flex:1 1 40rem;
+}
+  
+.euro .image img{
+    width:100%;
+    padding:1rem;
+    animation:float 3s linear infinite;
+}
+  
+@keyframes float{
+    0%, 100%{
+      transform: translateY(0rem);
+    }
+    50%{
+      transform: translateY(3rem);
+    }
+}
+  
+.euro .cont h2{
+    font-size: 5rem;
+    color:#333;
+}
+  
+.euro .cont p{
+    font-size: 1.7rem;
+    color:#666;
+    padding:1rem 0;
+}
+
+
+
+
+
+/*gallery*/
+
+
+.slider-container{
+    margin: 4rem auto;
+    width: 100%;
+    height: 30rem;
     position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
+}
+.slider-container img{
+    position: absolute;
+    opacity: 0;
+    transition: opacity 1s;
+    z-index: 1;
+    height: 330px;
+    width: 80%;
+    right: 0;
+    left: 10%;
+    top: -25%;
 
 }
-.euro .box img{
-    width: 100%;
-    height: 100%;
-   
-}
-.euro .box .overlay{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.8);
-  color: #ffff;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  padding: 3%;
-  opacity: 0;
-  top: 0;
-}
-.euro .box:hover .overlay{
+
+.slider-container img.active{
     opacity: 1;
 }
 
-.euro .box .overlay .describ{
-    text-align: center;
-}
-.euro .box .overlay h2{
+.slider-container .slide-num{
+    position: absolute;
+    left: 5rem;
+    top: 5rem;
+    background-color: rgba(0,0,0,.6);
+    color: #fff;
+    padding: 2rem 3rem;
     font-size: 3rem;
-    font-weight: 500;
-    letter-spacing: 1.1rem;
-    margin-top: 8rem;
-    margin-bottom: 13rem ;
-    
+    z-index: 2;
+
+
+}
+.slide_control{
+    width: 100%;
+    margin: auto;
+}
+.slide_control .prev,
+.slide_control .next{
+    background-color: var(--main-color);
+    color: #fff;
+    font-size: 3rem;
+    border-radius: 30rem;
+    text-align: center;
+    padding: 5px;
+    cursor: pointer;
+    user-select: none;
+    width: 10%;
+
+
+}
+.slide_control .prev{
+    float: left;
+}
+.slide_control .next{
+    float: right;
+}
+.slide_control .prev.disabled,
+.slide_control .next.disabled{
+    background-color: rgb(122 183 48 / 26%);
+    cursor: no-drop;
+}
+.slide_control .indicator{
+    width: 80%;
+    float: left;
+}
+
+.slide_control .indicator ul{
+    list-style: none;
+    margin: 0;
     text-align: center;
 }
-.euro .box .overlay p{
-    font-size: 1.6rem;
-    font-weight: 500;
-    margin: 6rem;
-    text-align: center;
-    line-height: 1.9rem;
+
+.slide_control .indicator ul li{
+    display: inline-block;
+    background-color: #7ab73099;
+    color: #f4f4f4;
+    /* font-weight: bold; */
+    height: 0.5rem;
+    width: 2.5rem;
+    margin: 0 0.5rem;
+    line-height: 1.1rem;
+    border-radius: 5rem;
+    cursor: pointer;
+
 }
+
+.slide_control .indicator ul li.active{
+    background-color: #7AB730;
+    color: #fff;
+}
+
+/*End of gallery slider*/
+
+/*places*/
+
+
+.country{
+    display: block;
+    margin-top: 13rem;
+    /* margin-left: 1%;*/
+
+}
+.country .place{
+    flex-wrap: wrap;
+    width: 100%;
+    display: block;
+    font-size: 20px;
+    margin-left: 187px;
+    margin-bottom: 200px;
+}
+.country .place .img-overlay{
+  /*flex:1 1 30rem;*/
+  border:1rem solid #fff;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+  border-radius: .5rem;
+  position: relative;
+  width: 35%;
+  height: 50%;
+  overflow: hidden;
+}
+.country .place .img-overlay img{
+  height:100%;
+  width:100%;
+  object-fit: cover;
+
+}
+
+.country .place .img-overlay .overlay{
+  position: absolute;
+  top:-100%; 
+  left:0;
+  height: 100%;
+  width:100%;
+  background:rgba(255,255,255,.9);
+  padding:2rem;
+  padding-top: 5rem;
+  text-align: center;
+}
+.country .place .img-overlay:hover .overlay{
+    top=0;
+}
+
+.country .place .overlay h3{
+    font-size: 2.5rem;
+    color:#333;
+}
+.country .place h3{
+    margin-bottom: 40px;
+    display: block;
+    color:var(--main-color);
+    text-decoration-style: double;
+    font-style: normal; 
+}
+
+.country .place p{
+
+    display: inline-block;
+    width: 38%;
+    margin-left: 50px;
+    float:right;
+
+}
+
 
 /*End of europe*/
 
