--- a/css/europe.css
+++ b/css/europe.css
@@ -135,7 +135,8 @@ section{
   
 .euro .cont h2{
     font-size: 5rem;
-    color:#333;
+    color:var(--main-color);
+
 }
   
 .euro .cont p{
@@ -264,39 +265,40 @@ section{
     margin-left: 187px;
     margin-bottom: 200px;
 }
-.country .place .img-overlay{
-  /*flex:1 1 30rem;*/
-  border:1rem solid #fff;
-  box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-  border-radius: .5rem;
-  position: relative;
-  width: 35%;
-  height: 50%;
-  overflow: hidden;
+.country .place img{
+    height: 40%;
+    width: 35%;
+}
+
+.country .place .img-overlay {
+    width: 40%;
+    height: 50%;
+    position: relative;
+    overflow: hidden;
+    margin: auto;
+    
+
 }
 .country .place .img-overlay img{
-  height:100%;
-  width:100%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
 
 }
-
 .country .place .img-overlay .overlay{
   position: absolute;
-  top:-100%; 
-  left:0;
+  top:-100%; left:0;
   height: 100%;
   width:100%;
   background:rgba(255,255,255,.9);
-  padding:2rem;
-  padding-top: 5rem;
+
   text-align: center;
 }
 .country .place .img-overlay:hover .overlay{
     top=0;
 }
 
-.country .place .overlay h3{
+
+.country .place .img-overlay .overlay h3{
     font-size: 2.5rem;
     color:#333;
 }
@@ -311,9 +313,9 @@ section{
 .country .place p{
 
     display: inline-block;
-    width: 38%;
+    width: 40%;
     margin-left: 50px;
-    float:right;
+   
 
 }
 
