--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ h1{
     width: 1075px;
     white-space: normal;
 }
+section{
+    display: block;
+}
 h3{
     margin: auto;
     color: #7AB730;
@@ -52,6 +55,7 @@ h3{
     margin-left: 150px;
     text-align: left;
     margin-top: 100px;
+    display: block;
 }
 .image{
     width: 470px;
