--- a/css/web.css
+++ b/css/web.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 
 :root{
     --main-color:#7AB730;
@@ -8,7 +9,7 @@
 }
 
 *{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Nunito', sans-serif;
     margin:0; padding:0;
     box-sizing: border-box;
     outline: none; border:none;
@@ -57,11 +58,14 @@ section{
     border-bottom: var(--border);
     position: fixed;
     top:0; left: 0; right: 0;
+    z-index: 9999;
+
 
 }
 
-.header .logo i{
+.header  i{
     height: 5rem;
+    width: 6rem;
     color: var(--main-color);
 }
 
@@ -121,6 +125,8 @@ section{
  padding-top: 6rem;
  padding-bottom: 4rem;
 }
+
+
 .box a p{
   font-size: 24px;
   color: #7AB730;
@@ -128,7 +134,7 @@ section{
 }
 .continents .box-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
     gap:1.5rem;
 }
 
@@ -235,10 +241,4 @@ section{
     100% {
         opacity: 1;
     }
-}
-
-/*Start Europe*/
-
-.europe{
-    
 }
